tests/error/poly_errors_py312/prev_param_in_bound2.py
from guppylang.decorator import guppy
from guppylang.std.lang import Copy, Drop


@guppy.struct
class MyStruct[T: (Copy, Drop), x: T]:
    pass


MyStruct.compile()
