tests/error/poly_errors_py312/prev_param_in_bound2.err
Error: Variable not defined (at $FILE:6:35)
  | 
4 | 
5 | @guppy.struct
6 | class MyStruct[T: (Copy, Drop), x: T]:
  |                                    ^ `T` is not defined

Guppy compilation failed due to 1 previous error
